Adjust price history to return actual price when there is no history